  DefaultForeignKeySearchModel.getCriteria() modified to accommodate the above
  EntityEditPanel.requestFocusAfterInsert property added
  EntityPanelProvider uses default entity caption if none is specified
  EntityApplicationPanel.setupEntityPanelProviders() added for overriding
  DocumentSizeFilter added
  EntityUiUtil.createTextArea() uses the above when a property has a maximum length defined
  ValueListProperty generified
  ValueListInputProvider generified further
  Demos fixed according to recent framework changes
  publish target added to ant build file and publications clause to ivy config
  common.ui.valuemap merged with common.ui.control
  'Bean' removed from common.ui.control value link classnames
  AbstractValueLink.ModelValue moved to common.model.Value
  EditModelValue moved to common.model.valuemap.ValueMapValue
  AbstractValueLink renamed to ValueLink, no longer abstract, uses the Value mechanism for the ui value as well as the model value
  AbstractValueLink descendants removed
  ToggleValueLink removed
  Control.Toggle added
  createToggleControl() moved back to Controls
  Control.Toggle moved up to ToggleControl
  ValueLinks, EntityUiUtil, some generification
  EntityUiUtil, removed redundant null check
  EntityUiUtil.LookupUIValue privatized
  EntityLookupField, some minor changes
  'Bean' removed from common.ui.control.ValueLinks method names
  ValueLink privatized, made inner class of ValueLinks
  ValueLink no longer extends Action
  LinkType, ValueLinks moved from common.ui.control to common.ui
  ColumnSearchPanel.DefaultInputFieldProvider.createTextProperty() bug fixed, missing conditional
  Controls.toggle... methods moved to ValueLinks, due to cyclical dependency
  ValueLinks.toggle... methods moved back to Controls
  common.Values refactored from ValueLinks
  common.ui.UiValues refactored from ValueLinks
  LinkType deprecated
  LinkType removed
  ValueLinks refactored