@@ -3331,3 +3331,5 @@
   LinkType deprecated
   LinkType removed
   ValueLinks refactored
+  Values.ValueLink, readOnly attribute removed
+  PropertyImpl.DateColumnValueConverter bug fixed, did not handle null values correctly
